--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-	"name": "simple-static-boilerplate",
+	"name": "cardfork",
 	"version": "0.0.1",
-	"description": "Simple static HTML page with HTML5 Boilerplate and Tailwind CSS.",
+	"description": "A website containing a printable storytelling and/or conversation-starting card deck inspired by the Hard Fork podcast.",
 	"license": "MIT",
-	"author": "Cory Evan Wright <coryevan@gmail.com>",
+	"author": "Cory Evan Wright <besublime@gmail.com>",
 	"scripts": {
-		"dev": "cross-env parcel src/index.html",
-		"build": "cross-env NODE_ENV=production parcel build src/*.html --dist-dir docs --log-level verbose --public-url ./ --no-cache --no-content-hash"
+		"dev": "cross-env parcel src/index.hbs",
+		"build": "cross-env NODE_ENV=production parcel build src/*.hbs --dist-dir docs --log-level verbose --public-url ./ --no-cache --no-content-hash"
 	},
 	"devDependencies": {
+		"@marcotss/parcel-transformer-handlebars-json": "^1.0.0",
 		"@parcel/packager-raw-url": "^2.8.3",
 		"@parcel/transformer-webmanifest": "^2.8.3",
 		"cross-env": "^7.0.2",
 		"parcel": "^2.8.3",
 		"postcss": "^8.4.21",
+		"sharp": "^0.31.3",
 		"tailwindcss": "^3.2.7"
 	}
 }
